implement hour and minute input fields as drop down input

--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -13,4 +13,4 @@
 
 <h4 class="mb-2 mt-0 text-2xl font-medium leading-tight text-primary">Eintrag editieren:</h4>
 
-<%= render "form", event: @event %>
+<%= render "edit_form", event: @event %>
