--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 <h1 class="font-bold text-4xl text-blue-500 mb-10">Neuer Kalendereintrag</h1>
 
-<%= render "form", event: @event %>
+<%= render "new_form", event: @event %>
 
 <br>
 
