--- a/app/views/events/_new_form.html.erb
+++ b/app/views/events/_new_form.html.erb
@@ -27,22 +27,31 @@
       </div>
       <div class="flex items-center">
         <div class="px-3 mb-2">
-          <%= form.label :date, "START DATE", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
-          <%= form.date_field :date, value: params[:date_from_today_view] || event.start_time&.strftime('%Y-%m-%d') || nil, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+          <%= form.label :starts_at_date, "STARTS AT DATE", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
+          <%= form.date_field :starts_at_date, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
         </div>
-        <%= button_tag "Reset", type: :button, class: "h-12 px-3 py-1 text-sm font-medium text-gray-700 bg-white border border-gray-200 rounded-md hover:border-gray-300", onclick: "document.getElementById('event_date').value=''" %>
         <div class="px-3 mb-2">
-          <%= form.label :time, "START TIME", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
-          <%= form.time_field :time, value: event.start_time&.strftime('%H:%M'), class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+          <%= form.label :starts_at_hour, "STARTS AT HOUR", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
+          <%= form.select :starts_at_hour, options_for_select([["-", ""]] + (0..24).map { |hour| [hour, hour] }), {}, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 mb-2 leading-tight focus:outline-none focus:bg-white" %>
         </div>
-        <%= button_tag "Reset", type: :button, class: "h-12 px-3 py-1 text-sm font-medium text-gray-700 bg-white border border-gray-200 rounded-md hover:border-gray-300", onclick: "document.getElementById('event_time').value=''" %>
+        <div class="px-3 mb-2">
+          <%= form.label :starts_at_minute, "STARTS AT MINUTE", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
+          <%= form.select :starts_at_minute, options_for_select([["-", ""]] + (0..59).map { |min| [min, min] }), {}, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+        </div>
       </div>
       <div class="flex items-center">
         <div class="px-3 mb-2">
-          <%= form.label :end_time, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
-          <%= form.datetime_field :end_time, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+          <%= form.label :ends_at_date, "ENDS AT DATE", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
+          <%= form.date_field :ends_at_date, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
         </div>
-        <%= button_tag "Reset", type: :button, class: "h-12 px-3 py-1 text-sm font-medium text-gray-700 bg-white border border-gray-200 rounded-md hover:border-gray-300", onclick: "document.getElementById('event_end_time').value=''" %>
+        <div class="px-3 mb-2">
+          <%= form.label :ends_at_hour, "ENDS AT HOUR", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
+          <%= form.select :ends_at_hour, options_for_select(options_for_select([["-", ""]] + (0..24).map { |hour| [hour, hour] })), {}, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+        </div>
+        <div class="px-3 mb-2">
+          <%= form.label :ends_at_minute, "ENDS AT MINUTE", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"  %>
+          <%= form.select :ends_at_minute, options_for_select([["-", ""]] + (0..59).map { |min| [min, min] }), {}, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 mb-2 leading-tight focus:outline-none focus:bg-white" %>
+        </div>
       </div>
       <div class="px-3 mb-2">
         <%= form.label "duration in minutes", style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
@@ -65,10 +74,6 @@
       <div class="px-3 mb-2">
         <%= form.label :lack_of_motivation_reason, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
         <%= form.text_area :lack_of_motivation_reason, style: "width:500px;height:250px", class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
-      </div>
-      <div class="px-3 mb-2">
-        <%= form.label :done, style: "display: block", class: "block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" %>
-        <%= form.check_box :done, class: "appearance-none block bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-2 leading-tight focus:outline-none focus:bg-white" %>
       </div>
       <div class="px-3 mb-2">
         <%= form.label :upload %>
