--- a/app/views/events/_view_today.html.erb
+++ b/app/views/events/_view_today.html.erb
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody class="bg-white dark:bg-slate-800">
-      <% if @events_hash.fetch("sunday").present? %>
+      <% if @events_hash.present? %>
         <% @sorted_days.each_with_index do |day, index| %>
           <tr class=" bg-sky-500/100">
             <div class="my-2 bg-sky-500/100">
